--- a/main.tex
+++ b/main.tex
@@ -31,12 +31,24 @@
 
 \chapter{The Beginning}
 
-\section{The Middle}
+\section{The Middle}{1}
 
-\noindent\lipsum[1-3]
+\lipsum[1]
 
 \begin{equation}
     x=y+5
+\end{equation}
+
+\section{The End}{3}
+
+\lipsum[2]
+
+\begin{equation}
+    y=mx+b
+\end{equation}
+
+\begin{equation}
+    E=mc^2
 \end{equation}
 
 \end{document}
