Fix manual section numbering.

--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 
 \chapter{The Beginning}
 
-\section{The Middle}{1}
+\section{The Middle}
 
 \lipsum[1]
 
@@ -39,7 +39,7 @@
     x=y+5
 \end{equation}
 
-\section{The End}{3}
+\section[3]{The End}    % Calling [X] before a section forces the section numbering
 
 \lipsum[2]
 
