--- a/commands.tex
+++ b/commands.tex
@@ -19,11 +19,11 @@
 
 
 % Second input used to declare a non-step increase in section numbering (i.e., section 1 declared with \section{Title} followed by section 3 declared with \section{Title}{3}, calling \section again resumes normal step numbering with section 4)
-\renewcommand{\section}[2]{
-  \ifx\relax#2\relax
+\renewcommand{\section}[2][]{
+  \ifx\relax#1\relax
       \refstepcounter{mysection}
     \else
-      \setcounter{mysection}{#2}
+      \setcounter{mysection}{#1}
     \fi
 
   \setcounter{equation}{0}
@@ -34,7 +34,7 @@
   \noindent\textbf{\thechapter-\themysection} % Number aligned with default left margin
   \hspace{-2em} % Indent section title 2em from the default margin
   \hspace{+1.6em} % Adjust back to the left margin
-  \textbf{#1} % Section title
+  \textbf{#2} % Section title
   
   \endgroup % End local group
   \medskip
