--- a/main.tex
+++ b/main.tex
@@ -32,23 +32,10 @@
 \chapter{The Beginning}
 
 \section{The Middle}
+\input{Chapters/1/the_middle}
 
-\lipsum[1]
-
-\begin{equation}
-    x=y+5
-\end{equation}
 
 \section[3]{The End}    % Calling [X] before a section forces the section numbering
-
-\lipsum[2]
-
-\begin{equation}
-    y=mx+b
-\end{equation}
-
-\begin{equation}
-    E=mc^2
-\end{equation}
+\input{Chapters/1/the_end}
 
 \end{document}
