--- a/page_style.tex
+++ b/page_style.tex
@@ -5,4 +5,5 @@
 % \fancyhead[RO,R]{\semester}
 % \renewcommand{\headrulewidth}{0.4pt}
 
-\setlength{\leftskip}{2em}
+%\setlength{\leftskip}{2em}
+\setlength{\parindent}{2em}
