--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[12pt]{report}
 
 %%%%%%%%%%%%%%%%%%%%%%
 % Define header variables
@@ -28,6 +28,7 @@
 \vskip 0.5in
 \end{titlepage}
 
+\tableofcontents
 
 \chapter{The Beginning}
 
