--- a/packages.tex
+++ b/packages.tex
@@ -1,17 +1,23 @@
-\usepackage[margin=1in]{geometry}   % For setting margins
-\usepackage{amsmath}				% For Math
-\usepackage{fancyhdr}				% For fancy header/footer
-\usepackage{graphicx}				% For including figure/image
+\usepackage[margin=1in]{geometry}   % Setting margins
+\usepackage{amsmath}				% Primary math package
+\usepackage{fancyhdr}				% Fancy header/footer
+\usepackage{graphicx}				% Including figure/image
 \usepackage{cancel}					% To use the slash to cancel out stuff in work
-\usepackage{physics}
-\usepackage{titlesec}
-\usepackage{siunitx}
-\usepackage{empheq}
-\usepackage{cochineal}
-\usepackage[cochineal]{newtxmath}
-\usepackage{hyperref}
+\usepackage{physics}                % Better math symbols common to physics
+\usepackage{titlesec}               % 
+\usepackage{siunitx}                % Easy SI unit expressions
+\usepackage{empheq}                 % Good for some alignment and equation boxing
+\usepackage{mathptmx}               % Times New Roman font
+\usepackage[libertine]{newtxmath}   % Change math font
+\usepackage[hypertexnames=false]{hyperref}  % Hyperlink reference in PDF
 %\usepackage{pgfplots}
-\usepackage{tikz}
-\usepackage{lipsum}
-\usepackage{enumitem}
-\usepackage{xfrac}
+\usepackage{tikz}                   % Detailed custom figures
+\usepackage{lipsum}                 % Dummy text
+\usepackage{enumitem}               % Better enumerate environment
+\usepackage{xfrac}                  % Better fraction commands
+\usepackage{subcaption}             % Multi-figure captions
+\usepackage{wrapfig}                % Enable wrapping text around figures
+\usepackage[font=footnotesize,labelfont=bf]{caption}    % Figure caption formatting
+\usepackage{mathtools}              % Beautify math and add some useful commands
+\usepackage[toc]{appendix}          % Add appendix sections
+\usepackage{multirow, booktabs}     % Better tabular commands
