--- a/phys_commands.tex
+++ b/phys_commands.tex
@@ -34,3 +34,21 @@
 %%%%%%%%%%%%%
 
 \newcommand*{\mean}[1]{\bar{#1}}
+
+%%%%%%%%%%%%%
+% Operators %
+%%%%%%%%%%%%%
+
+\newcommand{\parity}{\hat{P}}
+\newcommand{\hamiltonian}{\hat{H}}
+\newcommand{\linearop}{\hat{L}}
+\newcommand{\genop}{\hat{O}}
+\newcommand{\operator}[1]{\hat{#1}}
+\renewcommand{\comm}[2]{\qty[\hat{#1},\hat{#2}]}
+\renewcommand{\div}[1]{\nabla\cdot#1}
+
+%%%%%%%%%
+% Names %
+%%%%%%%%%
+
+\newcommand{\Schrodinger}{Schr\"{o}dinger }
