--- a/page_style.tex
+++ b/page_style.tex
@@ -1,1 +1,18 @@
+%%%%%%%%%%%%%%%%%%%%%%%
+% Fancy header/footer %
+%%%%%%%%%%%%%%%%%%%%%%%
+
+\fancyhf{}
+\fancyhead[RE]{\itshape Chapter \thechapter: \leftmark}
+\fancyhead[LO]{\itshape \themysection: \rightmark}
+\fancyhead[LE,RO]{\thepage}
+\renewcommand{\headrulewidth}{0.4pt}
+
+
+
+%%%%%%%%%%%
+% Spacing %
+%%%%%%%%%%%
+
+%\setlength{\leftskip}{2em}
 \setlength{\parindent}{2em}
