--- a/packages.tex
+++ b/packages.tex
@@ -4,13 +4,12 @@
 \usepackage{graphicx}				% Including figure/image
 \usepackage{cancel}					% To use the slash to cancel out stuff in work
 \usepackage{physics}                % Better math symbols common to physics
-\usepackage{titlesec}               % 
+%\usepackage{titlesec}               % title formatting
 \usepackage{siunitx}                % Easy SI unit expressions
 \usepackage{empheq}                 % Good for some alignment and equation boxing
 \usepackage{mathptmx}               % Times New Roman font
 \usepackage[libertine]{newtxmath}   % Change math font
-\usepackage[hypertexnames=false]{hyperref}  % Hyperlink reference in PDF
-%\usepackage{pgfplots}
+%\usepackage{pgfplots}              % create scientific plots
 \usepackage{tikz}                   % Detailed custom figures
 \usepackage{lipsum}                 % Dummy text
 \usepackage{enumitem}               % Better enumerate environment
@@ -21,3 +20,4 @@
 \usepackage{mathtools}              % Beautify math and add some useful commands
 \usepackage[toc]{appendix}          % Add appendix sections
 \usepackage{multirow, booktabs}     % Better tabular commands
+\usepackage[hypertexnames=false]{hyperref}  % Hyperlink reference in PDF
