Modify physics commands to remove unnecessary definitions and include a custom unit definition example.

--- a/phys_commands.tex
+++ b/phys_commands.tex
@@ -18,8 +18,6 @@
 %%%%%%%%%%%%%
 
 \newcommand*{\freq}{\mathord{\mathit{f}}\mkern1mu}
-\newcommand{\iu}{{i\mkern1mu}}
-\newcommand{\e}{\mathrm{e}}
 
 %%%%%%%%%%%%%
 % Constants %
@@ -39,11 +37,6 @@
 % Operators %
 %%%%%%%%%%%%%
 
-\newcommand{\parity}{\hat{P}}
-\newcommand{\hamiltonian}{\hat{H}}
-\newcommand{\linearop}{\hat{L}}
-\newcommand{\genop}{\hat{O}}
-\newcommand{\operator}[1]{\hat{#1}}
 \renewcommand{\comm}[2]{\qty[\hat{#1},\hat{#2}]}
 \renewcommand{\div}[1]{\nabla\cdot#1}
 
@@ -52,3 +45,9 @@
 %%%%%%%%%
 
 \newcommand{\Schrodinger}{Schr\"{o}dinger }
+
+%%%%%%%%%
+% Units %
+%%%%%%%%%
+
+\DeclareSIUnit{\MeVperc}{\unit{MeV/c^2}}
