Remove multiply defined packages and add bm package.

--- a/packages.tex
+++ b/packages.tex
@@ -23,8 +23,7 @@
 \usepackage{empheq}                 % Good for some alignment and equation boxing
 \usepackage{xfrac}                  % Better fraction commands
 \usepackage{mathtools}              % Beautify math and add some useful commands
-\usepackage{siunitx}                % Easy SI unit expressions
-\usepackage{empheq}                 % Good for some alignment and equation boxing
+\usepackage{bm}                     % Bold math
 %\usepackage{mathrsfs}               % Raph Smith's Formal Script math font
 
 
