Change enumerate margins, beautify commands file.

--- a/packages.tex
+++ b/packages.tex
@@ -13,6 +13,8 @@
     \renewcommand\cftchappagefont{\bfseries}
 \usepackage{lipsum}                 % Dummy text
 \usepackage{enumitem}               % Better enumerate environment
+    \setlist[enumerate,1]{leftmargin=2em} % Sets left margin for first-level enumerate lists
+    \setlist[enumerate,2]{leftmargin=3em} % Sets left margin for second-level enumerate lists
 \usepackage{appendix}    % Add appendix sections
 \usepackage{multirow, booktabs}     % Better tabular commands
 \usepackage[hypertexnames=false]{hyperref}  % Hyperlink reference in PDF
