--- a/packages.tex
+++ b/packages.tex
@@ -46,3 +46,4 @@
 \usepackage{wrapfig}                % Enable wrapping text around figures
 \usepackage[font=footnotesize,labelfont=bf]{caption}    % Figure caption formatting
 \usepackage{mdframed}
+    \mdfsetup{skipabove=\topskip,skipbelow=\topskip, innertopmargin=0}
