Change top and bottom spacing for principles environment.

--- a/commands.tex
+++ b/commands.tex
@@ -125,7 +125,7 @@
 % Examples %
 %%%%%%%%%%%%
 
-\mdfdefinestyle{examplestyle}{frametitleaboveskip=0.75\topskip, frametitlebelowskip=0.75\topskip, innermargin=1em, outermargin=1em}
+\mdfdefinestyle{examplestyle}{frametitleaboveskip=\topskip, frametitlebelowskip=\topskip, innermargin=1em, outermargin=1em}
 
 % Define environment for writing examples with autonumbering
 \newenvironment{example}
@@ -143,7 +143,7 @@
 % Principles %
 %%%%%%%%%%%%%%
 
-\mdfdefinestyle{principlestyle}{linewidth=0pt, frametitlealignment=\centering, frametitleaboveskip=0.75\topskip, frametitlebelowskip=0.75\topskip, frametitlebackgroundcolor=gray!20, backgroundcolor=gray!20, innermargin=1em, outermargin=1em}
+\mdfdefinestyle{principlestyle}{linewidth=0pt, frametitlealignment=\centering, frametitleaboveskip=\topskip, frametitlebelowskip=\topskip, frametitlebackgroundcolor=gray!20, backgroundcolor=gray!20, innermargin=1em, outermargin=1em, innerbottommargin=\topskip}
 
 \newenvironment{principle}[1]
     {
